# purge-old-branches-2

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: git_repo.md
src/purge_old_branches_2/: __main__.py  cli.py  csv_parser.py  git_repo.py
tests/: test_common_done_branches.py  test_csv_parser.py  test_delete_branches.py  test_get_branches_to_delete.py  test_parse_arguments.py  test_parse_git_branch_output.py
